--- a/george-n-co.html
+++ b/george-n-co.html
@@ -3,6 +3,8 @@
     <head>
         <link href="style_sheets\main.css" rel="stylesheet" type="text/css">
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial">
     </head>
     <body>
         <form class="dominant">
