--- a/test.html
+++ b/test.html
@@ -1,40 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
+  <link href="style_sheets\main.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial">
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-</style>
 </head>
 <body>
 
-<h1>CSS установить выпадающий текст при наведении</h1>
-
-<p>Наведите курсор на текст ниже, чтобы открыть выпадающийся текст.</p>
-
-<div class="dropdown">
-  <span>Наведи на меня</span>
-  <div class="dropdown-content">
-    <p>Привет Мир!</p>
-  </div>
-</div>
-
+  <div class="block-animation"> <a>КАМ</a></div>
 </body>
 </html>
 
